...
                         exampleDependencies: [.external(.JGProgressHUD)],
                         frameworkResources: ["Sources/**/*.storyboard", "Resources/**"],
                         exampleResources: ["Resources/**"])

// экран рюкзака
public let backpack = Module(name: .BackpackUI,
                             path: "Backpack",
                             frameworkDependancies: [.target(.Common), .target(.Haneke)],
                             exampleDependencies: [.target(.Detail)],
                             frameworkResources: ["Resources/**", "Sources/**/*.xib", "Sources/**/*.storyboard"],
                             exampleResources: ["Resources/**", "Sources/**/*.storyboard"])

// экран деталей по покемону
...
                           exampleResources: ["Resources/**"])

// экран поимки


public let `catch` = Module(name: .CatchUI,
                            path: "Catch",
                            frameworkDependancies: [.target(.Common), .target(.Haneke)],
                            exampleDependencies: [.external(.JGProgressHUD), .target(.NetworkKit)],
                            frameworkResources: ["Resources/**", "Sources/**/*.storyboard"],
                            exampleResources: ["Resources/**", "Sources/**/*.storyboard"])

// общая логика (работа с сохраненными данными / общие UI-компоненты / протоколы)
...
