...
    private var pokemonView: PokemonView?
    
    public override func viewDidLoad() {
        let image = UIImage(named: "Background", in: Bundle(for: CatchViewController.self), with: nil)
        backgroundImageView.image = image
        
        let buttonImage = UIImage(named: "Ball", in: Bundle(for: CatchViewController.self), with: nil)
        
        button.setImage(buttonImage, for: .normal)
        
        gotcha.isHidden = true
    }
    
...
